--- a/app/pug/pages/about.pug
+++ b/app/pug/pages/about.pug
@@ -4,29 +4,8 @@ block title
   | About
 
 block content
-  section.section.hero
-    .hero__bg
-      img(src="img/bg/portfolio-mount.jpg").hero__bg--image
 
-    ul.socials
-      each item in ['vk','github','in']
-        li.socials__item
-          a(href="").socials__link
-            +image-svg("socials__image socials__image--" + item,item)
-
-    a(href="").hamburger
-      +image-svg("hamburger__image","hamburger","0 0 40 35")
-
-    a(href="").down-arrow
-      +image-svg("down-arrow--image","arrow_down","0 0 25.18 16.164",25,16)
-
-    .hero__title
-      +image-svg("section__title","portfolio_header","0 0 1175.495 313.961")
-      .user.hero__user-block
-        .user__photo
-          img(src="./img/my.jpg")
-        .user__name Yuriy Bochkarev
-        .user__desc My Portfolio
+  include ../sections/hero
 
   section.section.about
     .about__left
@@ -81,6 +60,8 @@ block content
                       each skillTitle in skillArray
                         li.skill-section__item
                           .skill
-                            svg.skill__circle
+                            svg.skill__circle(viewBox="0 0 100 100" preserveAspectRatio="none")
+                              circle.skills__circle-under(cx="50" cy="50" r="40")
+                              circle.skills__circle-above(cx="50" cy="50" r="40")
                             .skill__name= skillTitle
-  section.section.map
+  include ../sections/footer
