--- a/app/pug/main-layout.pug
+++ b/app/pug/main-layout.pug
@@ -5,7 +5,7 @@ html(lang="en")
   head
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
-    meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1")
+    meta(name="viewport" content="width=device-width, initial-scale=1")
     link(rel="stylesheet" href="./css/style.min.css" type="text/css")
     script(src="./js/svg.js")
     link(rel="preload" href="./fonts/Roboto-Bold.woff2" type="font/woff2" as="font" crossorigin)
