--- a/app/scss/blocks/about.scss
+++ b/app/scss/blocks/about.scss
@@ -1,27 +1,23 @@
 .about{
   display: flex;
 }
-@include add-grid(12);
-@include add-gutter(1/3);
-@include add-gutter-style('split');
-@include sgs-change('debug',true);
 
 .about__left,
 .about__right{
   flex: 1 1 50%;
+  padding-bottom: 150px;
 }
 
 .about__left{
   background: $mount-white;
-
-  @include background-grid($color: gray);
 };
 
 .about__right{
   background: $mount-beige;
 }
 
-.about__triangle{
+.about__triangle,
+.works-head__triangle{
   position: absolute;
   bottom: 100%;
 }
@@ -36,11 +32,11 @@
 
 .about__section--wrapper{
   text-align: center;
+  padding: 0 10%;
 }
 
 .user-about__text{
   text-align: left;
-  padding: 0 80px;
 }
 
 .about-user-info__title{
@@ -53,5 +49,5 @@
 
 .about-data__content{
   margin-top: 50px;
-  padding-left: 30px;
+  padding: 0 10%;
 }
