--- a/app/scss/layout/_basis.scss
+++ b/app/scss/layout/_basis.scss
@@ -4,9 +4,15 @@ html, body{
   height: 100%;
 }
 
+html{
+  font-size: 16px;
+  @include laptop(font-size,15px);
+  @include tablet(font-size,14px);
+  @include phone(font-size,13px);
+}
+
 body{
   font-family: $font-default;
-  font-size: 16px;
   color: $color-default;
   line-height: 1.42;
   position: relative;
@@ -14,6 +20,7 @@ body{
   opacity: 1;
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
+  min-height: 100vh;
 }
 
 .wrapper {
